       - Crear componentes checbox group dentro de CheckboxComponent para permitir el uso entre variantes.
       -Dar soporte de personalizacion de estilos a los componentes.
    Observaciones:

    2025/02/18 - Components y Screen - Valentina Rincón
    Cambios:
       - Creado componente CheckboxGroup en \checkbox
       - Crear demás componentes checkbox  dentro de CheckboxComponent.tsx
       - Añadidas propiedades al componente base para hacerlo más dinamico en Checkbox.tsx
       - Añadida exportacion del componente CheckboxComponent en index.ts
    Observaciones:

    2025/02/19 - Components y Screen - Valentina Rincón
    Cambios:
       - Modificado componente para dar soporte de personalizacion de estilos Checkbox.tsx
       - Modificado componente para dar soporte de personalizacion de estilos CheckboxGroup.tsx
       - Modificado  componente para dar soporte de personalizacion de estilos en CheckboxComponent.tsx
       - Crear y desarrollar componente CheckboxSimple dentro de CheckboxComponent.tsx 
       - Renderizados componentes de CheckboxComponent, Toggle, CheckboxGroup y Avatars en \screen\home.tsx
       - Creado archivo de barril para exportacion de los componentes Toogle en \toggle\index.ts
    Observaciones:
    
    2025/02/20 - Components y Screen - Valentina Rincón
    Cambios:
       - Cambiar version de libreria en \package.json
       - Exportar componentes Avatar para empaquetarlos \en main.ts 
       - Modificado componente Avatar para crear variantes de estilos en \Avatar.tsx
       - Creado componente AvatarComponent para crear componetes basados en las variantes de estilos en \AvatarComponent.tsx 
       - Renderizados componentes Avatar e Indicator em \home.tsx
       - Creado archivo de barril para exportacion de los componentes Avatar.
       - Modificada estructura de componente para añadir propiedad que permite personalizar el checbox en CheckboxComponent.tsx
    Observaciones: