@@ -1,2 +1,1 @@
-
 export * as AvatarsComponent from "./AvatarsComponent";
