@@ -1,0 +1,1 @@
+export * as ProfileComponent from './ProfileComponent';
